# Hotel-booking-service

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bookings/: booking_views.py  models.py  room_views.py  serializers.py  test_api.py  tests.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
bookings/repositories/: booking_repository.py
bookings/services/: booking_service.py
config/: logging_setup.py  settings.py  urls.py
